--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Within your main project folder you should include a file called requirements.txt that
-can be used to install the relevant packages within a newly-created virtual environment
-using pip install –r requirements.txt. You can create this file easily using pip
-freeze > requirements.txt.
+Django==2.0.3
+django-appconf==1.0.2
+django-imagekit==4.0.2
+pilkit==2.0
+Pillow==5.0.0
+pytz==2018.3
+six==1.11.0
